# ops0

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  SETUP_INSTRUCTIONS.md  __init__.py  development-commands.md  pyproject.toml  requirements.txt  setup-dev-environment.sh  setup.py  test_deploy.py
.github/: CODEOWNERS  FUNDING.yml  SECURITY.md  dependabot.yml  labels.yml  pull_request_template.md
.github/DISCUSSION_TEMPLATE/: general.yml  ideas.yml  q-and-a.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  performances.yml
.github/codeql/: codeql-config.yml
.github/scripts/: check_docs_links.py  check_imports.py  check_version.py  process_bandit_report.py  setup-dev.sh  validate_examples.py
.github/workflows/: ci.yml  docs.yml  project-management.yml  release.yml  security.yml
cli/: commands.py
core/: decorators.py  executor.py  graph.py  storage.py
examples/: fraud_detection.py  simple_pipeline.py
ops0/: __init__..py  __init__.py  cli.py  decorators.py  executor.py  parser.py  storage.py
ops0/cdk/: __init__.py  generator.py
ops0/cdk/templates/: lambda_function.py.j2  step_functions.py.j2
runtime/: containers.py
scripts/: validate_installation.py
src/ops0/: __about__.py  __init__.py
src/ops0/cli/: __init__.py  commands.py  config.py  deploy.py  describe.py  doctor.py  list.py  logs.py  main.py  rollback.py  run.py  status.py  utils.py
src/ops0/cloud/: __init__.py  autoscaler.py  aws.py  azure.py  base.py  cost.py  gcp.py  kubernetes.py  local.py  monitor.py  orchestrator.py
src/ops0/core/: __init__.py  analyzer.py  config.py  decorators.py  exceptions.py  executor.py  graph.py  hooks.py  models.py  registry.py  storage.py  utils.py  validation.py
src/ops0/integrations/: README.md  __init__.py  base.py  example_pipeline.py  hugginface_integration.py  lightgbm_integration.py  numpy_integration.py  pandas_integration.py  pytorch_integration.py  sklearn_integration.py  tensorflow_integration.py  test_integration.py  xgboost_integration.py
src/ops0/runtime/: __init__.py  cloud_adapters.py  containers.py  monitoring.py  orchestrator.py  scheduler.py  utils.py
src/ops0/utils/: README.md  __init__.py  caching.py  concurrency.py  filesystem.py  formatting.py  hashing.py  helpers.py  network.py  retry.py  serialization.py  system.py  validation.py
tests/: conftest.py  test_decorators.py  test_executor.py  test_parser.py  test_storage.py
tests/unit/: test_decorators.py  test_storage.py
